--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,41 @@
-.deps
-.libs
-*.o
-*.lo
-*.la
+# Autotools
+aclocal.m4
+autom4te.cache
+compile
+config.guess
+config.h
+config.h.in
 config.log
-demos/tiles/
-demos/tiles/*
+config.status
+configure
+depcomp
+.deps
+INSTALL
+install-sh
+.libs
+libtool
+libtool.m4
+ltmain.sh
+lt~obsolete.m4
+ltoptions.m4
+ltsugar.m4
+ltversion.m4
 Makefile.in
 Makefile
 missing
-configure
-compile
-libtool
-depcomp
-install-sh
-ltmain.sh
+*.pc
+stamp-h?
+test-driver
+
+# C++
+*.o
+*.lo
+*.la
+
+memphis/memphis
+demos/tile-renderer
+demos/tile-server
+demos/tiles
+*.gir
+gtk-doc.make
+*.typelib
